--- a/DEV/SchoolHome.html
+++ b/DEV/SchoolHome.html
@@ -37,44 +37,48 @@
 			<input type="hidden" id="code" value="12543" >
 			<!-- 隐藏域end -->
 
-			<div class="content">
+			<div class="SchoolHome">
 				<div class="header">
 					<div class="left">
-						<h3>经营指标</h3>
-						<ul>
-<!-- 							<li>
-								<span>今日流水实收</span>
-								<em>¥378400</em>
-							</li>
-							<li>
-								<span>杂项支出</span>
-								<em>¥378400</em>
-							</li>
-							<li>
-								<span>今日咨询登记数</span>
-								<em>30人</em>
-							</li>
-							<li>
-								<span>今日报名数</span>
-								<em>30人</em>
-							</li>
-							<li>
-								<span>预约发出数</span>
-								<em>30人</em>
-							</li>
-							<li>
-								<span>今天请假数</span>
-								<em>30人</em>
-							</li>
-							<li>
-								<span>班级数</span>
-								<em>30人</em>
-							</li> -->
-						</ul>
+						<h3><a href="/pss/goIndex?code=123">查看指标详情>></a>经营指标</h3>
+						<a href="#">
+							<ul>
+	<!-- 							<li>
+									<span>今日流水实收</span>
+									<em>¥378400</em>
+								</li>
+								<li>
+									<span>杂项支出</span>
+									<em>¥378400</em>
+								</li>
+								<li>
+									<span>今日咨询登记数</span>
+									<em>30人</em>
+								</li>
+								<li>
+									<span>今日报名数</span>
+									<em>30人</em>
+								</li>
+								<li>
+									<span>预约发出数</span>
+									<em>30人</em>
+								</li>
+								<li>
+									<span>今天请假数</span>
+									<em>30人</em>
+								</li>
+								<li>
+									<span>班级数</span>
+									<em>30人</em>
+								</li> -->
+							</ul>
+						</a>
 					</div>
 					<div class="echartsBox">
-						<div class="echarts" id="echart1">
-						</div>
+						<!-- <a href="#"> -->
+							<div class="echarts" id="echart1">
+							</div>
+						<!-- </a> -->
 						<div class="selectBox">
 							<select name="" id="echartSelect">
 								<option value="income">今日流水实收</option>
