--- a/DEV/ZoneAddClass.html
+++ b/DEV/ZoneAddClass.html
@@ -35,44 +35,39 @@
 		<div class="pub_form">
 			<ul>
 				<li>
-					<span>班级名称</span>
-					<input type="text" class="short" placeholder="请输入">
-					<span class="wide">选择分类课程</span>
-					<select>
-						<option>请选择</option>
+					<span><i>*</i>班级名称</span>
+					<input type="text" class="short" placeholder="请输入班级名称" name="class_name" data-validate="any" data-must="1" />
+					<span class="wide"><i>*</i>选择分类课程</span>
+					<select name="course_id" data-validate="any" data-must="1">
+						<!-- <option>请选择</option> -->
 					</select>
 				</li>
 				<li>
-					<span>预招人数</span>
-					<input type="text" class="short" placeholder="请输入">
-					<span class="wide">选择教师</span>
-					<select>
-						<option>东方园</option>
+					<span><i>*</i>预招人数</span>
+					<input type="text" class="short" placeholder="请输入预招人数" name="reserve_num" data-validate="number" data-must="1" />
+					<span class="wide"><i>*</i>选择教师</span>
+					<select name="teacher_id" data-validate="any" data-must="1">
+						<!-- <option>请选择</option> -->
 					</select>
 				</li>
 				<li class="tips">*本课程共有15个课时，每个课时的推荐时长为1小时</li>
 				<li>
-					<span class="wide">选择开班时间</span>
-					<input type="date" />
+					<span class="wide"><i>*</i>选择开班时间</span>
+					<input type="date" name="start_time" data-validate="any" data-must="1"/>
 				</li>
 				<li>
-					<span>上课时段</span>
-					<select>
-						<option>每周</option>
-					</select>
-					<select>
-						<option>五</option>
-					</select>
-					<select>
-						<option>12点</option>
-					</select>
-					<select>
-						<option>23分</option>
-					</select>
-					<a href="JavaScript:;" class="btn"><i>+</i>添加新时间</a>
+				<span><i>*</i>上课时段</span>
+				<select>
+					<option value="day">每日</option>
+			<!-- 		<option value="week">每周</option>
+					<option value="month">每月</option> -->
+				</select>
+
+
+				<input type="text" class="short" id="day_times" placeholder="请输入上课时段" data-validate="any" data-must="1"/>
 				</li>
 			</ul>
-			<a href="JavaScript:;" class="btn">确定</a>
+			<a href="JavaScript:;" class="btn" id="submit_add">确定</a>
 			<a href="JavaScript:;" class="btn_dis">取消</a>
 		</div>
 
