--- a/DEV/StudentPayment.html
+++ b/DEV/StudentPayment.html
@@ -30,29 +30,93 @@
 
 		<div class="main_box" id="main_box">
 			<div class="main">
+				<div class="page_head">
+					<h3>缴续费</h3>
+				</div>
 				<div class="pub_form">
-					<ul>
+					<div class="left">
+						<ul>
+							<li>
+								<span class="wide"><i>*</i>缴费金额</span>
+								<input type="text" class="short" placeholder="请输入缴费金额" name="money" data-validate="number" data-must="1" />元
+							</li>
+							<li>
+								<span class="wide"><i>*</i>购买课时数</span>
+								<input type="text" class="short" placeholder="请输入购买课时数" name="lessons" data-validate="number" data-must="1" />节
+							</li>
+							<li>
+								<span class="wide">备注说明</span>
+								<textarea placeholder="请输入备注说明(不超过100字)" name="notes" data-validate="any" maxlength="100"></textarea>
+							</li>
+						</ul>
+
+						<a href="JavaScript:;" class="btn" id="submit">确认提交</a>
+						<a href="JavaScript:;" class="btn_dis">取消</a>
+					</div>
+
+					<div class="right">
+						<ul>
+							<li>
+								<span class="wide">缴费总额</span>
+								<em>-</em>
+							</li>
+							<li>
+								<span class="wide">剩余课时数</span>
+								<em>-</em>
+							</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="page_head">
+					<h3>缴费明细列表</h3>
+				</div>
+
+				<div class="pub_list">
+					<div class="head">
+						<span>缴费时间</span>
+						<span>缴费金额</span>
+						<span>购买课时</span>
+						<span class="flex_3">备注说明</span>
+					</div>
+					<ul class="body">
+
 						<li>
-							<span class="wide">缴费总额</span>
-							<em>-</em>
+							<div class="item"><p><span>2018-12-09</span></p></div>
+							<div class="item"><p><span>233</span></p></div>
+							<div class="item"><p><span>3课时</span></p></div>
+							<div class="item flex_3"><p><span>望京幼儿园</span></p></div>
+						</li>
+
+						<li>
+							<div class="item"><p><span>2018-12-09</span></p></div>
+							<div class="item"><p><span>233</span></p></div>
+							<div class="item"><p><span>3课时</span></p></div>
+							<div class="item flex_3"><p><span>望京幼儿园</span></p></div>
 						</li>
 						<li>
-							<span class="wide">剩余课时数</span>
-							<em>-</em>
-						</li>
-						<li class="line"></li>
-						<li>
-							<span class="wide">缴费金额</span>
-							<input type="text" class="short" placeholder="请输入缴费金额" name="money" data-validate="number" data-must="1" />元
+							<div class="item"><p><span>2018-12-09</span></p></div>
+							<div class="item"><p><span>233</span></p></div>
+							<div class="item"><p><span>3课时</span></p></div>
+							<div class="item flex_3"><p><span>望京幼儿园</span></p></div>
 						</li>
 						<li>
-							<span class="wide">购买课时数</span>
-							<input type="text" class="short" placeholder="请输入购买课时数" name="lessons" data-validate="number" data-must="1" />节
+							<div class="item"><p><span>2018-12-09</span></p></div>
+							<div class="item"><p><span>233</span></p></div>
+							<div class="item"><p><span>3课时</span></p></div>
+							<div class="item flex_3"><p><span>望京幼儿园</span></p></div>
 						</li>
 					</ul>
-					<a href="JavaScript:;" class="btn" id="submit">确认提交</a>
-					<a href="JavaScript:;" class="btn">取消</a>
+					<div class="page">
+						<p>
+							<a href="JavaScript:;" class="prev">0</a><a href="JavaScript:;" class="on">1</a><a href="JavaScript:;">2</a><a href="JavaScript:;">3</a><a href="JavaScript:;">4</a><a href="JavaScript:;" class="next">0</a>
+						</p>
+					</div>
 				</div>
+
+
+
+
 
 			</div>
 		</div>
