--- a/DEV/zoneHome.html
+++ b/DEV/zoneHome.html
@@ -9,12 +9,15 @@
 </head>
 
 <body>
-	<div class="top_box">
-		<img src="./images/logo.png"/>
-		<p>管好资源、看清数据<span class="times" id="times"></span></p>
-		<span class="user">宇文靖<a href="JavaScript:;" id="logout">退出</a>
-					</span>
-	</div>
+
+    <div class="top_box">
+    	<img src="./images/logo.png" />
+    	<p></p>
+    	<img src="./images/logo.png" />
+        <p><span class="times" id="times"></span></p>
+        <span class="user flagship">望京<a href="JavaScript:;" id="logout">退出</a></span>
+    </div>
+
 
 	<!-- 隐藏域start school_code -->
 	<input type="hidden" id="zone_code" value="123">
