--- a/DEV/Visitor.html
+++ b/DEV/Visitor.html
@@ -32,6 +32,7 @@
 		<div class="main">
 			<div class="page_head">
 				<h3>咨询登记</h3>
+				<span id="run_qrcode" class="run_qrcode"></span>
 				<a href="JavaScript:;" data-href="/pss/goAddVisitor" class="btn">筛选</a>
 				<a href="JavaScript:;" class="btn"><i>+</i>批量导入
 					<input type="file" class="inputFile">
