--- a/DEV/StudentArchive.html
+++ b/DEV/StudentArchive.html
@@ -153,6 +153,22 @@
 					<div class="arrow"><div>
 				</li>
 			</ul>
+			<ul class="report">
+
+				<li>
+					<img src="./images/logo.png"/>
+				</li>
+				<li>
+					<img src="./images/logo.png"/>
+				</li>
+				<li>
+					<img src="./images/logo.png"/>
+				</li>
+				<li>
+					<img src="./images/logo.png"/>
+				</li>
+			</ul>
+			<p class="comment">dsgsg师傅的说法公司分管</p>
 
 			<div class="page">
 				<p>
