--- a/DEV/StudentArchive.html
+++ b/DEV/StudentArchive.html
@@ -154,12 +154,15 @@
 				</li>
 			</ul>
 			<ul class="report">
+				<li class="comment"><h6>本期点评：</h6>
+				<div><p class="text">dsgsg师傅的说法公司分管</p></div>
+				</li>
 
 				<li>
-					<img src="./images/logo.png"/>
+					<img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1527524862784&di=a0a68d73681880586072652ac2c5ad40&imgtype=0&src=http%3A%2F%2Fimg5.duitang.com%2Fuploads%2Fitem%2F201312%2F06%2F20131206170445_WhQuQ.jpeg"/>
 				</li>
 				<li>
-					<img src="./images/logo.png"/>
+					<img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1527524958673&di=40bdec8e68243a12e10ef67a71bc5eb5&imgtype=0&src=http%3A%2F%2Fimg.zcool.cn%2Fcommunity%2F01bdba57a199570000012e7e186de5.jpg%401280w_1l_2o_100sh.jpg"/>
 				</li>
 				<li>
 					<img src="./images/logo.png"/>
@@ -168,7 +171,6 @@
 					<img src="./images/logo.png"/>
 				</li>
 			</ul>
-			<p class="comment">dsgsg师傅的说法公司分管</p>
 
 			<div class="page">
 				<p>
