--- a/DEV/SchoolLogin.html
+++ b/DEV/SchoolLogin.html
@@ -2,70 +2,106 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>机构-登录</title>
+    <title>undefined</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
   </head>
   <body>
-	<div class="top_box">
+
+<!-- 	<div class="top_box">
 		<img src="./images/logo.png"/>
 		<p>管好资源、看清数据<span class="times" id="times"></span></p>
+		<span class="user">宇文靖云<a href="JavaScript:;">退出</a>
 		</span>
-	</div>
+	</div> -->
 
-	<div class="layout_center">
-		<div class="content_box">
+<!-- 	<div class="left_nav" id="left_nav">
+		<ul>
+	  	<li><a href="#">首页</a></li>
+	  	<li><a href="#">校区</a></li>
+	  	<li class="on"><a href="#">课程资源</a></li>
+	  	<li><a href="#">教学教研</a></li>
+	  	<li><a href="#">教职员工</a></li>
+	  	<li><a href="#">账号设置</a></li>
+	  	<li><a href="#">系统资源</a></li>
+	</ul>
+	</div> -->
 
-			<!-- 隐藏域start ~二维码素材~ -->
-			<input type="hidden" id="qecode_data" value="-dsdsfdsfxxxx" >
-			<!-- 隐藏域end -->
+<!-- 	<div class="main_box" id="main_box">
+		<div class="main">
+			<p>功能模块区域！</p>
+		</div>
+	</div> -->
 
-			<!-- 扫描登录start -->
+	<!-- 隐藏域start ~二维码素材~ -->
+	<input type="hidden" id="qecode_data" value="-dsdsfdsfxxxx" >
+	<!-- 隐藏域end -->
+
+
+	<div class="page_main">
+		<div id="nav" class="nav">
+			<h6 class="on" data-type="passwordLogin"><em class="ico"></em>密码登录</h6>
+			<h6 data-type="qrcodeLogin"><em class="ico"></em>二维码登录</h6>
+		</div>
+
+		<div class="type">
+			<label for="school">
+				<input type="radio" name="usertype" id="school" value="school" checked>
+				<span>机构</span>
+			</label>		
+			<label for="zone">
+				<input type="radio" name="usertype" id="zone" value="zone">
+				<span>校区</span>
+			</label>
+		</div>
+
+		<!-- 账号密码登录start -->
+		<div id="passwordLoginBox" class="pub_form" action="loginBox">
+			<ul>
+				<li>
+					<input type="text" class="mobile" name="mobile" data-validate="mobile" data-must="1"  placeholder="请输入注册手机号">
+				</li>
+				<li>
+					<input type="password" class="password" name="password" data-validate="password" data-must="1"  placeholder="请输入密码">
+				</li>
+			</ul>
+			<a href="JavaScript:;" class="btn" id="submit_login">登录</a>
+		</div>
+		<!-- 账号密码登录end -->
+
+
+		<!-- 扫描登录start -->
+		<div id="qrcodeLoginBox" class="qrcodeLoginBox none" action="loginBox">
 			<div class="qrcodeLogin">
-				<a href="JavaScript:;" class="loginType" data-type="qrcodeLogin"></a>
-				<div class="qrcode">
+				<div class="qrcode_show">
+					<div class="qrcode">
+					</div>
+					<p>打开微信，进入培生素公众号，进入我的培生素选择扫一扫，扫描上图二维码登录</p>
 				</div>
-				<p>打开微信，进入培生素公众号，进入我的培生素选择扫一扫，扫描上图二维码登录</p>
-			</div>
-			<!-- 扫描登录end -->
-
-			<!-- 账号密码登录start -->
-			<div class="passwordLogin none">
-				<a href="JavaScript:;" class="loginType" data-type="passwordLogin"></a>
-				<h5>密码登录</h5>
-				<div class="pub_form">
-					<ul>
-						<li>
-							<input type="text" name="code" data-validate="number" data-must="1" placeholder="机构代码">
-						</li>
-						<li>
-							<input type="text" name="user" data-validate="any" data-must="1"  placeholder="账号">
-						</li>
-						<li>
-							<input type="password" name="password" data-validate="password" data-must="1"  placeholder="密码">
-						</li>
-					</ul>
-					<p class="none">机构代码、用户名和密码不匹配</p>
-					<a href="JavaScript:;" class="btn" id="submit_login">登录</a>
+				<!-- 扫描成功start -->
+				<div class="loginStatus_success none">
+					<p>扫描成功，请在手机上根据提示确认登录</p>
 				</div>
-			</div>
-			<!-- 账号密码登录end -->
+				<!-- 扫描成功end -->
 
-			<!-- 扫描成功start -->
-			<div class="loginStatus_success none">
-				<p>扫描成功，请在手机上根据提示确认登录</p>
+				<!-- 扫描失败start -->
+				<div class="loginStatus_error none">
+					<p>二维码已失效</p>
+					<a href="JavaScript:;" class="btn">刷新二维码</a>
+				</div>
+				<!-- 扫描失败end -->
 			</div>
-			<!-- 扫描成功end -->
-
-			<!-- 扫描失败start -->
-			<div class="loginStatus_error none">
-				<p>二维码已失效</p>
-				<a href="JavaScript:;" class="btn">刷新二维码</a>
-			</div>
-			<!-- 扫描失败end -->
 
 		</div>
+		<!-- 扫描登录end -->
+
+
+		<div class="info">
+			<a href="JavaScript:;"></a>
+			<a href="JavaScript:;"></a>
+			<a href="JavaScript:;"></a>
+		</div>
+
 	</div>
-	<p class="layout_footer">京 ICP 证 17002468 号 | Copyright © 2006-2017, website.com, All Rights Reserved</p>
   </body>
 </html>
